// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MarkdownPage /> with \`paragraphModifier\` props matches with snapshot 1`] = `
<div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h1
      className="title__StyledTitle-sc-46lshq-0 hUijIm"
      id="h1"
    >
      H1
    </h1>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fPeLkM"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gPtwkN"
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h2
      className="title__StyledTitle-sc-46lshq-0 hSNVgV"
      id="h2"
    >
      H2
    </h2>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h3
      className="title__StyledTitle-sc-46lshq-0 hdphTD"
      id="h3"
    >
      H3
    </h3>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h1
      className="title__StyledTitle-sc-46lshq-0 hUijIm"
      id="emphasis"
    >
      Emphasis
    </h1>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fPeLkM"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gPtwkN"
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 jyjgro"
  >
    <p
      className="k-Paragraph k-Paragraph--primary k-Paragraph--withoutMargin"
    >
      Emphasis, aka italics, with 
      <em>
        asterisks
      </em>
       or 
      <em>
        underscores
      </em>
      .
Strong emphasis, aka bold, with 
      <strong>
        asterisks
      </strong>
       or 
      <strong>
        underscores
      </strong>
      .
Combined emphasis with 
      <strong>
        asterisks and 
        <em>
          underscores
        </em>
      </strong>
      .
Strikethrough uses two tildes. ~~Scratch this.~~
    </p>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h1
      className="title__StyledTitle-sc-46lshq-0 hUijIm"
      id="list"
    >
      List
    </h1>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fPeLkM"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gPtwkN"
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fnnfRJ"
  >
    <ul
      className="bullet-list__StyledBulletList-rdyx84-0 hFAvjB list__BulletListStyle-sc-1hya2vn-0 djxla-d"
    >
      <li
        className="bullet-list__StyledItem-rdyx84-1 iyzgTs"
      >
        Unordered list can use asterisks
      </li>
    </ul>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fnnfRJ"
  >
    <ul
      className="bullet-list__StyledBulletList-rdyx84-0 hFAvjB list__BulletListStyle-sc-1hya2vn-0 djxla-d"
    >
      <li
        className="bullet-list__StyledItem-rdyx84-1 iyzgTs"
      >
        Or minuses
      </li>
    </ul>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fnnfRJ"
  >
    <ul
      className="bullet-list__StyledBulletList-rdyx84-0 hFAvjB list__BulletListStyle-sc-1hya2vn-0 djxla-d"
    >
      <li
        className="bullet-list__StyledItem-rdyx84-1 iyzgTs"
      >
        Or pluses
      </li>
    </ul>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h1
      className="title__StyledTitle-sc-46lshq-0 hUijIm"
      id="link"
    >
      Link
    </h1>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fPeLkM"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gPtwkN"
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 jyjgro"
  >
    <p
      className="k-Paragraph k-Paragraph--primary k-Paragraph--withoutMargin"
    >
      <a
        className="k-Paragraph__link"
        href="https://www.google.com"
      >
        I'm an inline-style link
      </a>
    </p>
  </div>
</div>
`;

exports[`<MarkdownPage /> with children matches with snapshot 1`] = `
<div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h1
      className="title__StyledTitle-sc-46lshq-0 hUijIm"
      id="h1"
    >
      H1
    </h1>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fPeLkM"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gPtwkN"
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h2
      className="title__StyledTitle-sc-46lshq-0 hSNVgV"
      id="h2"
    >
      H2
    </h2>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h3
      className="title__StyledTitle-sc-46lshq-0 hdphTD"
      id="h3"
    >
      H3
    </h3>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h1
      className="title__StyledTitle-sc-46lshq-0 hUijIm"
      id="emphasis"
    >
      Emphasis
    </h1>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fPeLkM"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gPtwkN"
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 jyjgro"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      Emphasis, aka italics, with 
      <em>
        asterisks
      </em>
       or 
      <em>
        underscores
      </em>
      .
Strong emphasis, aka bold, with 
      <strong>
        asterisks
      </strong>
       or 
      <strong>
        underscores
      </strong>
      .
Combined emphasis with 
      <strong>
        asterisks and 
        <em>
          underscores
        </em>
      </strong>
      .
Strikethrough uses two tildes. ~~Scratch this.~~
    </p>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h1
      className="title__StyledTitle-sc-46lshq-0 hUijIm"
      id="list"
    >
      List
    </h1>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fPeLkM"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gPtwkN"
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fnnfRJ"
  >
    <ul
      className="bullet-list__StyledBulletList-rdyx84-0 hFAvjB list__BulletListStyle-sc-1hya2vn-0 djxla-d"
    >
      <li
        className="bullet-list__StyledItem-rdyx84-1 eYPRdi"
      >
        Unordered list can use asterisks
      </li>
    </ul>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fnnfRJ"
  >
    <ul
      className="bullet-list__StyledBulletList-rdyx84-0 hFAvjB list__BulletListStyle-sc-1hya2vn-0 djxla-d"
    >
      <li
        className="bullet-list__StyledItem-rdyx84-1 eYPRdi"
      >
        Or minuses
      </li>
    </ul>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fnnfRJ"
  >
    <ul
      className="bullet-list__StyledBulletList-rdyx84-0 hFAvjB list__BulletListStyle-sc-1hya2vn-0 djxla-d"
    >
      <li
        className="bullet-list__StyledItem-rdyx84-1 eYPRdi"
      >
        Or pluses
      </li>
    </ul>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 howlXy"
  >
    <h1
      className="title__StyledTitle-sc-46lshq-0 hUijIm"
      id="link"
    >
      Link
    </h1>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fPeLkM"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gPtwkN"
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 jyjgro"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      <a
        className="k-Paragraph__link"
        href="https://www.google.com"
      >
        I'm an inline-style link
      </a>
    </p>
  </div>
</div>
`;
